# mydlp

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  README  bootstrap.sh  build.sh  configure.ac  configure.ac.tmpl  configure.tmp  schema_map.txt
debian/: changelog  (+10 more)
src/: Make.bat  Makefile.am  gen_server_cluster.erl  mydlp.app.in  mydlp.erl  mydlp.hrl  mydlp.rel.in  mydlp_acceptor.erl  mydlp_api.erl  mydlp_app.erl  mydlp_echo_fsm.erl  mydlp_echo_worker.erl  mydlp_fsm.erl  mydlp_http_fsm.erl  mydlp_http_raw_fsm.erl  mydlp_sup.erl  mydlp_worker_sup.erl  overview.edoc.in
src/backend/: .gitignore  BackendServer.py  InteractiveRun.bat  Make.bat  Makefile.am  ManualRun.bat  MyDLPBackendServer.py  Run.bat  pom.xml  seqstream.py
src/backend/java/: .gitignore  Makefile.am  pom.xml
src/backend/py/: .gitignore  AppServerSvc.py  BCFileIntegrity.py  Makefile.am  ManualRun.bat  MyDLPBackendServer.py  RegisterService.bat  Run.bat  bfi.c  iban.py  magic.py  mymagic.py  sitecustomize.py
src/endpoint/: .gitignore  Makefile.am  generate_latest.sh
src/endpoint/win/: downloads_msi.sh  generate_latest.sh  mydlp-dep-conf.vbs
src/integration/: Makefile.am
src/integration/seclore/: Makefile.am  log4j.properties
src/lib/: Makefile.am
src/mod_dlp/: .gitignore  Makefile.am  README  mod_cpphello.cpp  mod_dlp.cpp
src/mydlp/: .mydlp_acl.erl.swp  .mydlp_api.erl.swp  .mydlp_discover_fs.erl.swp  .mydlp_discover_rfs.erl.swp  .mydlp_discovery_manager.erl.swp  .mydlp_logger.hrl.swp  .mydlp_matchers.erl.swp  .mydlp_mnesia.erl.swp  .mydlp_mysql.erl.swp  .mydlp_regex.erl.swp  .mydlp_schema.hrl.swp  .mydlp_smtp.hrl.swp  .mydlp_smtp_fsm.erl.swp  2  InteractiveRun.bat  Make.bat  Makefile.am  ManualRun.bat  RegisterService.bat  RemoveService.bat  Run.bat  RunProduction.bat  denied_page.html  dynamic_compile.erl  gen_server_cluster.erl  logger_file.config  logger_sasl.config  mime_util.erl  mydlp-ep.app  mydlp-ep.conf  mydlp-ep.rel  mydlp-production.config  mydlp-reset-db  mydlp-sasl.config  mydlp-smb-discover  mydlp-watchdog  mydlp.app.in  mydlp.conf  mydlp.erl  mydlp.hrl  (+69 more)
src/resources/: 10k_content.txt  10k_cover.txt  10k_financial_data.txt  10k_financial_statement.txt  10k_performanceGraph.txt  10q_consolidated.txt  10q_content.txt  10q_cover.txt  10q_information.txt  Makefile.am  chinese_address_terms.txt  chinese_common_names.txt  chinese_lastnames.txt  chinese_names.txt  chinese_surnames.txt  cities_china.txt  cities_hongkong.txt  cities_taiwan.txt  cv.txt  disease_names.txt  drug_names.txt.big  icd9_codes.txt  india_form16.txt  india_form16A.txt  investment_finance_terms.txt  names.txt  names_wl.txt  national_drug_code.txt.big  network_terms.txt  personal_finance_terms.txt  pricing_terms.txt  region_taiwan.txt  regions_china.txt  regions_hongkong.txt  regions_taiwan.txt  sensitive_diseases.txt  strategic_business_documents.txt  surnames.txt  taiwanese_lastnames.txt
src/schema/: HEAD_mydlp.sql  HEAD_mydlp_log.sql  HEAD_mydlp_report.sql  Makefile.am
src/schema/diffs/: 0.9.102-1___mydlp_log___p001.sql  0.9.111-1___mydlp___p001.sql  0.9.116-1___mydlp___p001.sql  0.9.117-1___mydlp___p001.sql  0.9.117-1___mydlp_log___p001.sql  0.9.118-1___mydlp___p001.sql  0.9.120-1___mydlp___p001.sql  0.9.137-1___mydlp___p001.sql  0.9.138-1___mydlp_log___p001.sql  0.9.149-1___mydlp_log___p001.sql  0.9.150-1___mydlp___p001.sql  0.9.162-1___mydlp___p001.sql  0.9.174-1___mydlp___p001.sql  0.9.178-1___mydlp___p001.sql  0.9.179-1___mydlp___p001.sql  0.9.189-1___mydlp_log___p001.sql  0.9.199-1___mydlp___p001.sql  0.9.205-1___mydlp___p001.sql  0.9.208-1___mydlp_log___p001.sql  0.9.213-1___mydlp___p001.sql  0.9.213-1___mydlp_log___p001.sql  0.9.213-1___mydlp_log___p002.sql  0.9.215-1___mydlp___p001.sql  2.0.10-1___mydlp_report___p001.sql  2.0.11-1___mydlp_log___p001.sql  2.0.13-1___mydlp_log___p001.sql  2.0.20-1___mydlp___p001.sql  2.0.20-1___mydlp_log___p001.sql  2.0.24-1___mydlp___p001.sql  2.0.24-1___mydlp_log___p001.sql  2.0.32-1___mydlp___p001.sql  2.0.34-1___mydlp___p001.sql  2.0.39-1___mydlp___p001.sql  2.0.40-1___mydlp___p001.sql  2.0.42-1___mydlp___p001.sql  2.0.48-1___mydlp___p001.sql  2.0.49-1___mydlp___p001.sql  2.0.71-1___mydlp___p001.sql  2.0.8-1___mydlp___p001.sql  2.0.9-1___mydlp___p001.sql  (+8 more)
src/schema/dumps/: 0.9.102-1___mydlp_log.sql  0.9.111-1___mydlp.sql  0.9.116-1___mydlp.sql  0.9.117-1___mydlp.sql  0.9.117-1___mydlp_log.sql  0.9.118-1___mydlp.sql  0.9.120-1___mydlp.sql  0.9.124-1___mydlp.sql  0.9.137-1___mydlp.sql  0.9.138-1___mydlp.sql  0.9.138-1___mydlp_log.sql  0.9.149-1___mydlp_log.sql  0.9.150-1___mydlp.sql  0.9.159-1___mydlp.sql  0.9.162-1___mydlp.sql  0.9.164-1___mydlp.sql  0.9.167-1___mydlp.sql  0.9.174-1___mydlp.sql  0.9.178-1___mydlp.sql  0.9.179-1___mydlp.sql  0.9.181-1___mydlp.sql  0.9.189-1___mydlp_log.sql  0.9.197-1___mydlp.sql  0.9.199-1___mydlp.sql  0.9.200-1___mydlp.sql  0.9.205-1___mydlp.sql  0.9.208-1___mydlp_log.sql  0.9.210-1___mydlp.sql  0.9.213-1___mydlp.sql  0.9.213-1___mydlp_log.sql  0.9.215-1___mydlp.sql  0.9.232-1___mydlp.sql  0.9.240-1___mydlp.sql  0.9.244-1___mydlp.sql  0.9.99-1___mydlp.sql  0.9.99-1___mydlp_log.sql  2.0.10-1___mydlp_report.sql  2.0.11-1___mydlp_log.sql  2.0.13-1___mydlp_log.sql  2.0.17-1___mydlp.sql  (+28 more)
src/script/: Makefile.am  mydlp-archive-logdb  mydlp-backend-ctl  mydlp-backoff-mail  mydlp-download-xp-deps  mydlp-index  mydlp-log  mydlp-mysql-maintenance  mydlp-read-log  mydlp-revision-list  mydlp-revision-restore  mydlp-revision-save  mydlp-update-index  mydlp-version  mydlp-watchdog
src/sysconf/: Makefile.am
src/sysconf/apache/: Makefile.am  mydlp.apache-site
src/sysconf/jetty/: Makefile.am  jetty.default  jetty.xml  webdefault.xml
src/sysconf/logrotate/: Makefile.am  mydlp  mydlp-apache2
src/sysconf/ossim/: configure-ossim.sh  mydlp.cfg
src/sysconf/ossim/logrotate/: mydlp
src/sysconf/rsyslog/: Makefile.am  mydlp.conf
src/sysconf/solr/: .gitignore  Makefile.am
src/sysconf/tomcat/: Makefile.am  server.xml  solr.xml  tomcat6.default
src/thrift/: Make.bat  Makefile.am  moddlp.thrift  mydlp.thrift  mydlp_bz.thrift  mydlp_ui.thrift
(+15 files in other folders)
