###
###    Copyright (C) 2012 Huseyin Kerem Cevahir <kerem@mydlp.com>
###
###--------------------------------------------------------------------------
###    This file is part of MyDLP.
###
###    MyDLP is free software: you can redistribute it and/or modify
###    it under the terms of the GNU General Public License as published by
###    the Free Software Foundation, either version 3 of the License, or
###    (at your option) any later version.
###
###    MyDLP is distributed in the hope that it will be useful,
###    but WITHOUT ANY WARRANTY; without even the implied warranty of
###    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
###    GNU General Public License for more details.
###
###    You should have received a copy of the GNU General Public License
###    along with MyDLP.  If not, see <http://www.gnu.org/licenses/>.
###--------------------------------------------------------------------------

mydlpresourcesdir = $(datadir)/mydlp/resources

mydlpresources_DATA = \
	10k_content.txt \
	10k_cover.txt \
	10k_financial_data.txt \
	10k_financial_statement.txt \
	10k_performanceGraph.txt \
	10q_consolidated.txt \
	10q_content.txt \
	10q_cover.txt \
	10q_information.txt \
	cv.txt \
	disease_names.txt \
	drug_names.txt \
	icd9_codes.txt \
	india_form16A.txt \
	india_form16.txt \
	investment_finance_terms.txt \
	names.txt \
	names_indian.txt \
	national_drug_code.txt \
	network_terms.txt \
	personal_finance_terms.txt \
	pricing_terms.txt \
	sensitive_diseases.txt \
	sensitive_drugs.txt \
	surnames.txt \
	strategic_business_documents.txt \
	chinese_address_terms.txt \
	chinese_common_names.txt \
	chinese_lastnames.txt \
	taiwanese_lastnames.txt \
	cities_china.txt \
	cities_taiwan.txt \
	cities_hongkong.txt
	regions_china.txt \
	regions_taiwan.txt \
	regions_hongkong.txt
